Fix issue where no match was doing too many rewrites